--- a/index.html
+++ b/index.html
@@ -6,6 +6,49 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <div class="body">
+            <header>
+
+            </header>
+            <div class="container clearfix">
+
+                <aside>
+                    <div class="contenitore">
+
+                    </div>
+                </aside>
+
+                <main>
+                    <div class="contenitore">
+
+                    </div>
+                </main>
+
+                <aside-destra>
+                    <div class="contenitore-destra">
+                        <div class="quadrato">
+                            <div class="contenitore-quadrato">
+
+                            </div>
+                        </div>
+                        <div class="quadrato">
+                            <div class="contenitore-quadrato">
+
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                </aside-destra>
+
+            </div>
+
+            <footer>
+
+            </footer>
+        </div>
+
 
     </body>
 </html>
